src/test/regression_testing/test_files/java/NPD/bad/Test04.java
package bad;
public class Test04 {
    static String name;

    public static void test4_main(String[] args) {
        System.out.println("Name length: " + name.length());
    }
}